--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+#speed up gradle
+org.gradle.configureondemand=true
+kapt.use.worker.api = true
+org.gradle.parallel=true
+org.gradle.caching=true
