--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://maven.tokend.io" }
     }
 }
 
